css/index.css
/*verifed at 11.57am 26/5/2019*/
*{
	border:0;
	margin:0;
	padding:0;
	font-family:Montserrat;
}
html{
	scroll-behavior: smooth;
	
}
body{
	background-color:#d3d3d3;
}

	a{
		text-decoration:none !important;
	}
	#mainNav {
  position: absolute;
  border-bottom: 1px solid #e9ecef;
  background-color: white;
  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
}



/*start portfolio*/
.greeter{
	margin-left:-1%;
	//margin-bottom:100%;
	padding:auto;
	min-height: 35rem;
}
/* portfolio #portfolio-flters {
    padding: 0;
    margin: 5px 0 35px 0;
    list-style: none;
    text-align: center;
}
#portfolio #portfolio-flters li {
    cursor: pointer;
    margin: 15px 15px 15px 0;
    display: inline-block;
    padding: 10px 20px;
    font-size: 12px;
    line-height: 20px;
    color: #666666;
    border-radius: 4px;
    text-transform: uppercase;
    background: #fff;
    margin-bottom: 5px;
    transition: all 0.3s ease-in-out;
} */
/*end portfolio*/


/*Night mode*/
.nightmode body{
	background-color:#000000;
}
.nightmode article{
	background-color:#ffffff;
}
.nightmode .timeline{
	color:#ff0000;
}

/*slideshow*/
.goBehind{
	z-index:-1;
	overflow:none;
	position:fixed;
	display:block;
	width:100%;
	height:100%;
	
}
.caption{
		margin-top:20%;
		margin-bottom:11%;
		z-index:1;
		
}
.content{
	background-color:#d3d3d3;
	background-size:cover;
}
.slide{
	/* 	position:absolute;
		width:100%;
		height:auto;
		display:none;
		background-color:blue;
		margin:-20% 0% 0% -10%; */
		position:absolute;
		width:100%;
		height:auto;
		min-height: 35rem;
		display:none;
		background-color:blue;
		/*margin:-20% auto;*/
		margin:-20% -1%; 
	}
@keyframes hide {
  from {opacity: 1;}
  to {opacity: 0;}
}
@keyframes show{
	from {opacity:0;}
	to{opacity:1;}
	
}
@keyframe expand{
	from{
		width:0%;
		height:0%;
	}
	to{
		width:100%;
		height:50%;
	}
}
@keyframe contract{
	from{
		width:100%;
		height:50%;
	}
	to{
		width:0%;
		height:0%;
	}
	
}
.remove{
	
	animation-name: hide;
	animation-duration: 1.5s;
}
.show{
	animation-name: show;
	animation-duration: 1.5s;
	
	
}
.thumbnails{

	margin-left:30%;
	margin-bottom:2%;
	width:70%;
	height:auto;
}
.thumbnails img{
	width:10%;
	margin:1% auto;
}
.nav-link{
	color:#fff !important;
}
.webtitle{
	color:white;
	font-weight:bold;
}
.websubtitle{
	color:#63fffa;
	border: 3px #fff;
}
.Nbutton{
	background-color:#4ff9ff;
	color:black;
}
.Nbutton:hover{
	color:#fff !important;
}

